--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Honey Badger Task Management</title>
 
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
+		
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -26,6 +27,15 @@
 
 		<footer class="btm-menu-bar">
 			<p>this will be where we have a 'load user' option</p>
+			<button id="open-modal">Open Modal Test</button>
 		<footer/>
+
+		<div class="modal" id="user-modal">
+			<div class="modal-content">
+				User Modal Text Here!!!
+				<span class="close" id="close-user-modal">&times;</span>
+			</div>
+		</div>
+
   </body>
 </html>
