Building out select user form

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,6 +32,15 @@
 
 		<div class="modal" id="user-modal">
 			<div class="modal-content">
+				<form id="user-form">
+					<input type="text" id="username-input" placeholder="Enter User Name">
+					<select name="existing-users" id="existing-users">
+						<option value="user1">User1test</option>
+						<option value="user2">User2test</option>
+						<option value="user3">User3test</option>
+					</select>
+					<input type="submit" value="Create User">
+				</form>
 				User Modal Text Here!!!
 				<span class="close" id="close-user-modal">&times;</span>
 			</div>
