Add user fetch functions

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
 		</main>
 
 		<footer class="btm-menu-bar">
-			<p>this will be where we have a 'load user' option</p>
+			<p id="current-user-footer-label">No Loaded User</p>
 			<button id="open-modal">Open Modal Test</button>
 		<footer/>
 
@@ -35,14 +35,11 @@
 				<form id="user-form">
 					<input type="text" id="username-input" placeholder="Enter User Name">
 					<select name="existing-users" id="existing-users">
-						<option value="user1">User1test</option>
-						<option value="user2">User2test</option>
-						<option value="user3">User3test</option>
 					</select>
-					<input type="submit" value="Create User">
+					<input type="submit" value="Create or Load User">
 				</form>
 				User Modal Text Here!!!
-				<span class="close" id="close-user-modal">&times;</span>
+				<!-- <span class="close" id="close-user-modal">&times;</span> -->
 			</div>
 		</div>
 
