Building out task list render function

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,6 +21,7 @@
           <p>this will be where the 'add task' line goes</p>
         </div>
         <div class="task-list">
+          <ul class="task-items-list" id="task-items-list"></ul>
           <p>tihs will be the list of tasks and all that goodness</p>
         </div>
       </div>
