--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,11 @@
       </div>
       <div class="task-area">
         <div class="top-menu-bar">
-          <p>this will be where the 'add task' line goes</p>
+          <form id="new-task-form">
+            <label for="new-task-name">New Task: </label>
+            <input type="text" id="new-task-name" name="new-task-name" />
+            <input type="submit" value="Create Task" id="submit-task-btn" />
+          </form>
         </div>
         <div class="task-list">
           <ul class="task-items-list" id="task-items-list"></ul>
