Implement Delete functions on front and back end

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
   <body>
     <main>
       <div class="project-bar">
-        <p>test from project bar div</p>
+        <h2>Project List</h2>
         <ul class="project-list" id="project-sidebar-list"></ul>
       </div>
       <div class="task-area">
@@ -24,9 +24,9 @@
             <input type="submit" value="Create Task" id="submit-task-btn" />
           </form>
         </div>
+        <h2>Current Tasks:</h2>
         <div class="task-list">
           <ul class="task-items-list" id="task-items-list"></ul>
-          <p>tihs will be the list of tasks and all that goodness</p>
         </div>
       </div>
     </main>
