--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Honey Badger Task Management</title>
+    <title>Task Yeeter</title>
 
     <script src="index.js"></script>
 
@@ -35,6 +35,7 @@
             <input type="text" id="new-task-name" name="new-task-name" />
             <input type="submit" value="Create Task" id="submit-task-btn" />
           </form>
+          <div id="title">Task Yeeter</div>
         </div>
         <div id="task-header">
           <h2>Current Tasks</h2>
